2004-12-01  John Luke  <john.luke@gmail.com>

	* Gui/Pads/FileScout.cs: use ShadowType.In so the
	FileBrowser doesn't look funny when it is the only pad

2004-11-16  Todd Berman  <tberman@off.net>

	* Internal/Project/Project/AbstractProject.cs: Make sure that
	references of references are copied in properly. This code needs to
	be refactored. However, this does work. We should basically be walking
	through the references, for Project references, and calling out
	to a helper function. I will rewrite this soon to be more robust
	and less insane.

2004-11-12  Todd Berman  <tberman@off.net>

	* Gui/HtmlControl/MozillaControl: No gtype registration, fixes
	jba's bug.

2004-11-11  Todd Berman  <tberman@off.net>

	* Makefile.am: Add $(MONO_POSIX_OEE)
	* Internal/Project/Combine/Combine.cs: #ifdef around
	FileMode using. This should fix cvs HEAD users.

2004-11-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Internal/Parser/IParser.cs: Added
	HandlesFileExtension() for selection among multiple parsers
	* Services/ParserService/DefaultParserService.cs: Added
	parser selection using IParser.HandlesFileExtension()

2004-11-02  John Luke  <john.luke@gmail.com>

	* Services/File/RecentOpen.cs: use simpler RecentFiles AddWithLimit
	* Services/File/RecentFiles.cs: sort and return items in the right order
	among some other incremental improvements, should also fix bug #68999
	* Commands/AutoStartCommands.cs: revert Todds workaround from yesterday

	* Services/File/RecentOpen.cs:
	* Services/Project/DefaultProjectService:
	* Commands/MenuItemBuilders.cs: display project name for projects

	* Services/File/DefaultFileService.cs:
	* Services/File/RecentOpen.cs:
	* Commands/MenuItemBuilders.cs:
	* Commands/FileCommand.cs: display File [Project] or just File

2004-11-01	Fawad Halim  <fawad@fawad.net>

	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyParameter.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyMethod.cs