@@ -1,3 +1,10 @@
+2004-12-03  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Gui/Pads/ClassScout/NodeBuilder/DefaultDotNetClassScoutNodeBuilder.cs:
+	UpdateClassTree: Changed parameter parentNode to projectNode,
+	since this is what it is. DropPhantomNamespaces now deletes
+	unexpanded namespaces if they are empty. This fixes bug #70149.
+
 2004-12-01  John Luke  <john.luke@gmail.com>
 
 	* Gui/Pads/FileScout.cs: use ShadowType.In so the
